# lumo-dashboard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  ProjectMap.md  README.md  SPEC.md  TASK.md  docker-compose.prod.yml  docker-compose.yml  justfile  pyproject.toml  start.sh
.github/workflows/: cd.yml  ci.yml
backend/: camera_service_reference.py
backend/app_template/: __init__.py  main.py
backend/app_template/api/: health.py  items.py
backend/app_template/core/: config.py
backend/app_template/domain/: models.py
backend/app_template/services/: items.py
backend/lumo_dashboard/: main.py
backend/lumo_dashboard/api/: arm.py  camera.py  config.py  health.py  processes.py  ws.py
backend/lumo_dashboard/core/: config.py  health_chat.py  health_db.py  health_garmin.py
backend/lumo_dashboard/drivers/: arm_driver.py  camera_driver.py
backend/stubs/: cv2.pyi  psutil.pyi
backend/stubs/gi/repository/: __init__.pyi
backend/stubs/lerobot/motors/: __init__.pyi  feetech.pyi
backend/tests/: test_arm_safety.py  test_health.py  test_items.py  test_joint_range_limits.py
devops/: .pre-commit-config.yaml  backend.dockerfile  backend.test.dockerfile  frontend.dockerfile
frontend/: eslint.config.mjs  next.config.js  orval.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.js  layout.tsx  page.js  page.tsx
frontend/src/app/providers/: AppProviders.tsx
frontend/src/components/arm/: JointRow.module.css  JointRow.tsx  JointSliderControl.module.css  JointSliderControl.tsx
frontend/src/components/dashboard/: DashboardShell.module.css  DashboardShell.tsx
frontend/src/components/dashboard/tabs/: ArmsTab.tsx  ConfigTab.tsx  OperationsTab.tsx  OverviewTab.tsx  Tabs.module.css
frontend/src/components/ui/: ActionButton.tsx  Badge.tsx  Card.tsx  SectionTitle.tsx  StatusDot.tsx  ui.module.css
frontend/src/hooks/: useDashboardState.ts
frontend/src/lib/api/: dashboardClient.ts  types.ts
frontend/src/lib/constants/: dashboard.ts
frontend/src/theme/: mui-theme.ts  tokens.ts
scripts/: check_no_sys_path_mutation.py
