[project]
name = "app_template"
version = "0.1.0"
description = "FastAPI + Next.js fullstack template"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi",
    "pydantic>=2.0",
    "pydantic-settings",
    "uvicorn[standard]",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pre-commit>=3.3.3",
    "ruff>=0.9.0",
    "pyright[nodejs]>=1.1.390",
    "mypy>=1.14.0",
]

test = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "httpx",
]

[tool.uv]
default-groups = ["dev", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app_template"]

[tool.hatch.build.targets.sdist]
include = [
    "backend/app_template",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.coverage.run]
branch = true
source = ["backend/app_template"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 88
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
strict = true
files = ["backend/app_template"]

[tool.pyright]
include = ["backend/app_template"]
