[project]
name = "lumo-dashboard"
version = "0.1.0"
description = "Lumo Dashboard backend and frontend services for arm and camera monitoring"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi",
    "pydantic>=2.0",
    "pydantic-settings",
    "psutil",
    "uvicorn[standard]",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pre-commit>=3.3.3",
    "ruff>=0.9.0",
    "pyright[nodejs]>=1.1.390",
    "mypy>=1.14.0",
    "numpy",
    "opencv-python-headless",
    "types-psutil",
]

test = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "httpx",
]

[tool.uv]
default-groups = ["dev", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/lumo_dashboard"]

[tool.hatch.build.targets.sdist]
include = [
    "backend/lumo_dashboard",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.coverage.run]
branch = true
source = ["backend/lumo_dashboard"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TID"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
strict = true
files = ["backend/lumo_dashboard"]
mypy_path = ["backend/stubs"]
python_version = "3.10"

[tool.pyright]
include = ["backend/lumo_dashboard"]
stubPath = "backend/stubs"
pythonVersion = "3.10"
